--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Player pos]
-Pos=61,66
+Pos=67,64
 Size=382,114
 Collapsed=0
 
 [Window][Camera]
-Pos=60,184
-Size=384,79
+Pos=69,183
+Size=380,79
+Collapsed=0
+
+[Window][俺のデバッグ]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
