--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Player pos]
-Pos=67,64
+Pos=67,63
 Size=382,114
 Collapsed=0
 
@@ -26,5 +26,10 @@ Collapsed=0
 [Window][俺のデバッグ]
 Pos=60,60
 Size=32,35
+Collapsed=0
+
+[Window][Player]
+Pos=70,266
+Size=219,116
 Collapsed=0
 
