--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="2d\ImGuiManager.cpp" />
     <ClCompile Include="base\DirectXCommon.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
+    <ClCompile Include="EnemyState.cpp" />
     <ClCompile Include="enemy\enemy.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathFunction.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="base\SafeDelete.h" />
     <ClInclude Include="base\TextureManager.h" />
     <ClInclude Include="base\WinApp.h" />
+    <ClInclude Include="EnemyState.h" />
     <ClInclude Include="enemy\enemy.h" />
     <ClInclude Include="input\Input.h" />
     <ClInclude Include="MathFunction.h" />
