--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -109,7 +109,9 @@
     <ClCompile Include="2d\ImGuiManager.cpp" />
     <ClCompile Include="base\DirectXCommon.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
-    <ClCompile Include="EnemyState.cpp" />
+    <ClCompile Include="enemy\BaseEnemyState.cpp" />
+    <ClCompile Include="enemy\EnemyStateApproach.cpp" />
+    <ClCompile Include="enemy\EnemyStateLeave.cpp" />
     <ClCompile Include="enemy\enemy.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathFunction.cpp" />
@@ -141,7 +143,9 @@
     <ClInclude Include="base\SafeDelete.h" />
     <ClInclude Include="base\TextureManager.h" />
     <ClInclude Include="base\WinApp.h" />
-    <ClInclude Include="EnemyState.h" />
+    <ClInclude Include="enemy\BaseEnemyState.h" />
+    <ClInclude Include="enemy\EnemyStateApproch.h" />
+    <ClInclude Include="enemy\EnemyStateLeave.h" />
     <ClInclude Include="enemy\enemy.h" />
     <ClInclude Include="input\Input.h" />
     <ClInclude Include="MathFunction.h" />
