--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -110,6 +110,7 @@
     <ClCompile Include="base\DirectXCommon.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
     <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="CollisionManeger.cpp" />
     <ClCompile Include="enemy\enemy.cpp" />
     <ClCompile Include="enemy\enemyBullet.cpp" />
     <ClCompile Include="main.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="base\TextureManager.h" />
     <ClInclude Include="base\WinApp.h" />
     <ClInclude Include="CollisionConfig.h" />
+    <ClInclude Include="CollisionManeger.h" />
     <ClInclude Include="enemy\enemy.h" />
     <ClInclude Include="enemy\enemyBullet.h" />
     <ClInclude Include="input\Input.h" />
