--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,12 @@ Size=550,680
 Collapsed=0
 
 [Window][Player pos]
-Pos=421,193
+Pos=902,75
 Size=382,114
 Collapsed=0
 
 [Window][Camera]
-Pos=430,111
+Pos=901,-2
 Size=380,79
 Collapsed=0
 
